--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-streamlit
-jinja2
-pandas
-plotly
-scikit-learn
-PyPDF2
+# Web Framework
+streamlit>=1.28.0
+
+# Template Engine
+jinja2>=3.1.0
+
+# Data Processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Visualization
+plotly>=5.18.0
+
+# Machine Learning
+scikit-learn>=1.3.0
+
+# PDF Processing
+PyPDF2>=3.0.0
