--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
+*.class
 *.so
 .Python
-*.egg-info/
-dist/
 build/
+dist/
+*.egg-info/
+*.egg
 
-# Virtual environments
+# Virtual Environment
 venv/
 env/
+.venv/
 .env
 
 # IDE
@@ -19,13 +21,23 @@ env/
 *.swp
 *.swo
 
-# OS
-.DS_Store
-Thumbs.db
-nul
-
 # Streamlit
 .streamlit/secrets.toml
 
+# Jupyter
+.ipynb_checkpoints/
+
+# OS
+.DS_Store
+Thumbs.db
+
 # Logs
 *.log
+logs/
+
+# Temp
+*.tmp
+.cache/
+
+# Generated
+journalism_cv/my_cv.html
