--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,3 +2,13 @@
 headless = true
 port = 8501
 enableCORS = false
+
+[theme]
+primaryColor = "#2563eb"
+backgroundColor = "#ffffff"
+secondaryBackgroundColor = "#f0f2f6"
+textColor = "#262730"
+font = "sans serif"
+
+[browser]
+gatherUsageStats = false
