--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # Web Framework
-streamlit>=1.28.0
+streamlit>=1.28.0,<2.0.0
 
 # Template Engine
-jinja2>=3.1.0
+jinja2>=3.1.0,<4.0.0
 
 # Data Processing
-pandas>=2.0.0
-numpy>=1.24.0
+pandas>=2.0.0,<3.0.0
+numpy>=1.24.0,<2.0.0
 
 # Visualization
-plotly>=5.18.0
+plotly>=5.18.0,<6.0.0
 
 # Machine Learning
-scikit-learn>=1.3.0
+scikit-learn>=1.3.0,<2.0.0
 
 # PDF Processing
-PyPDF2>=3.0.0
+PyPDF2>=3.0.0,<4.0.0
